# risc0-metal-hybrid

./: .gitignore  CHANGELOG.md  NOTICE  README.md  REAUDIT.md  RESULT.md  SECURITY.md
.github/workflows/: ci.yml
bench/: busy-cpu.csv  busy-metal.csv  cpu.csv  hash-cpu.csv  hash-metal.csv  hello-cpu.csv  hello-metal.csv  metal.csv
e2e/: Cargo.toml  README.md
e2e/host/: Cargo.toml
e2e/host/src/: main.rs
e2e/methods/guest/: Cargo.toml
e2e/methods/guest/src/: main.rs
m0-metalhal-smoke/: Cargo.toml
m0-metalhal-smoke/src/: lib.rs  main.rs
patches/: risc0-circuit-rv32im-4.0.4-metal-hybrid.diff
scripts/: validate.sh
